# extra-platforms

./: .buildinfo  .gitignore  .mailmap  agents.html  architectures.html  changelog.html  changelog.md  ci.html  citation.cff  claude.md  code-of-conduct.html  contributing.html  detection.html  extra_platforms.html  genindex.html  groups.html  index.html  install.html  license  license.html  lychee.toml  objects.inv  platforms.html  py-modindex.html  pyproject.toml  pytest.html  readme.md  renovate.json5  search.html  searchindex.js  shells.html  sphinx.html  terminals.html  tests.html  todolist.html  trait.html
.claude/skills/repomatic-audit/: SKILL.md
.doctrees/: agents.doctree  architectures.doctree  changelog.doctree  ci.doctree  code-of-conduct.doctree  contributing.doctree  detection.doctree  environment.pickle  extra_platforms.doctree  groups.doctree  index.doctree  install.doctree  license.doctree  platforms.doctree  pytest.doctree  shells.doctree  sphinx.doctree  terminals.doctree  tests.doctree  todolist.doctree
.github/: code-of-conduct.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml
.github/workflows/: autofix.yaml  autolock.yaml  cancel-runs.yaml  changelog.yaml  debug.yaml  docs.yaml  label-sponsors.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.yaml  lint.yaml  release.yaml  renovate.yaml  tests.yaml
_modules/: extra_platforms.html  functools.html  index.html
_modules/extra_platforms/: architecture.html  ci.html  detection.html  docs_update.html  group.html  groups.html  operations.html  platform.html  platforms.html  pytest.html  trait.html
_modules/tests/: conftest.html  test_architecture_data.html  test_ci_data.html  test_deprecated.html  test_detection.html  test_group.html  test_group_data.html  test_operations.html  test_platform_data.html  test_pytest.html  test_root.html  test_sphinx_crossrefs.html  test_trait.html  test_utils.html
_sources/: agents.md.txt  architectures.md.txt  ci.md.txt  contributing.md.txt  detection.md.txt  extra_platforms.rst.txt  groups.md.txt  index.md.txt  install.md.txt  license.md.txt  platforms.md.txt  pytest.md.txt  shells.md.txt  sphinx.md.txt  terminals.md.txt  tests.md.txt  tests.rst.txt  trait.md.txt
_static/: documentation_options.js
docs/: agents.md  architectures.md  ci.md  cli.md  conf.py  contributing.md  detection.md  docs_update.py  extra_platforms.md  extra_platforms.rst  groups.md  index.md  install.md  license.md  platforms.md  pytest.md  shells.md  sphinx.md  terminals.md  tests.md  tests.rst  trait.md
docs/_ext/: myst_docstrings.py
docs/_static/: custom.css
docs/assets/: dependencies.mmd  mermaid-dark-fixes.css
extra_platforms/: __init__.py  __main__.py  _deprecated.py  _docstrings.py  _types.py  _utils.py  _windows.py  agent_data.py  architecture.py  architecture_data.py  ci.py  ci_data.py  detection.py  docs_update.py  group.py  group_data.py  groups.py  operations.py  platform.py  platform_data.py  platform_info.py  platforms.py  pytest.py  shell_data.py  terminal_data.py  trait.py
tests/: __init__.py  cli-test-suite.toml  conftest.py  test_agent_data.py  test_architecture_data.py  test_ci_data.py  test_deprecated.py  test_detection.py  test_group.py  test_group_data.py  test_groups.py  test_myst_docstrings.py  test_operations.py  test_platform_data.py  test_platform_info.py  test_platforms.py  test_pytest.py  test_root.py  test_shell_data.py  test_sphinx_crossrefs.py  test_terminal_data.py  test_trait.py  test_trait_data.py  test_utils.py
