[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9" ]

[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "extra-platforms"
version = "9.1.0"
description = "🔎 Detect architectures, platforms, shells and CI systems, grouped by family"
readme = "readme.md"
keywords = [
  "Almquist Shell",
  "Alpine Linux",
  "ALT Linux",
  "Amazon Linux",
  "Android",
  "Arch Linux",
  "Architecture detection",
  "ARM (32-bit)",
  "ARM64 (AArch64)",
  "ARMv5TE (little-endian)",
  "ARMv6 (little-endian)",
  "ARMv7 (little-endian)",
  "ARMv8 (32-bit, little-endian)",
  "AT&T System Five",
  "Azure Pipelines",
  "Bamboo",
  "Bash",
  "Buildkite",
  "Buildroot",
  "C shell",
  "CachyOS",
  "CentOS",
  "Circle CI",
  "Cirrus CI",
  "CloudLinux OS",
  "CodeBuild",
  "Command Prompt",
  "Cygwin",
  "Dash",
  "Debian",
  "DragonFly BSD",
  "Exherbo Linux",
  "Fedora",
  "Fish",
  "FreeBSD",
  "Gentoo Linux",
  "GitHub Actions runner",
  "GitLab CI",
  "GNU/Hurd",
  "Guix System",
  "Haiku",
  "Heroku CI",
  "IBM AIX",
  "IBM PowerKVM",
  "IBM z/Architecture (s390x)",
  "illumos",
  "Intel 80386 (i386)",
  "Intel Pentium (i586)",
  "Intel Pentium Pro (i686)",
  "Kali Linux",
  "Korn shell",
  "KVM for IBM z Systems",
  "Linux Mint",
  "LoongArch (64-bit)",
  "macOS",
  "Mageia",
  "Mandriva Linux",
  "Manjaro Linux",
  "MidnightBSD",
  "MIPS (32-bit, big-endian)",
  "MIPS (32-bit, little-endian)",
  "MIPS64 (big-endian)",
  "MIPS64 (little-endian)",
  "multiplatform",
  "NetBSD",
  "Nobara",
  "Nushell",
  "OpenBSD",
  "openSUSE",
  "OpenWrt",
  "Oracle Linux",
  "OS detection",
  "Parallels",
  "Pidora",
  "Platform detection",
  "PowerPC (32-bit)",
  "PowerPC 64-bit (big-endian)",
  "PowerPC 64-bit (little-endian)",
  "PowerShell",
  "Pytest",
  "Raspbian",
  "RedHat Enterprise Linux",
  "RISC-V (32-bit)",
  "RISC-V (64-bit)",
  "Rocky Linux",
  "Scientific Linux",
  "Slackware",
  "Solaris",
  "SPARC (32-bit)",
  "SPARC (64-bit)",
  "SunOS",
  "SUSE Linux Enterprise Server",
  "tcsh",
  "TeamCity",
  "Travis CI",
  "Tuxedo OS",
  "Ubuntu",
  "Ultramarine",
  "Unix",
  "WebAssembly (32-bit)",
  "WebAssembly (64-bit)",
  "Windows",
  "Windows Subsystem for Linux",
  "x86-64 (AMD64)",
  "XenServer",
  "Xonsh",
  "Zsh",
]
license-files = [ "license" ]
authors = [ { name = "Kevin Deldycke", email = "kevin@deldycke.com" } ]
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">=3.10"
# See: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Environment :: Win32 (MS Windows)",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  # This is a copy of the full "Operating System" hierarchy as we aim to be able to detect all platforms.
  "Operating System :: Android",
  "Operating System :: BeOS",
  "Operating System :: iOS",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS 9",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft",
  "Operating System :: Microsoft :: MS-DOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: Windows :: Windows 3.1 or Earlier",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: Microsoft :: Windows :: Windows 95/98/2000",
  "Operating System :: Microsoft :: Windows :: Windows CE",
  "Operating System :: Microsoft :: Windows :: Windows NT/2000",
  "Operating System :: Microsoft :: Windows :: Windows Server 2003",
  "Operating System :: Microsoft :: Windows :: Windows Server 2008",
  "Operating System :: Microsoft :: Windows :: Windows Vista",
  "Operating System :: Microsoft :: Windows :: Windows XP",
  "Operating System :: OS Independent",
  "Operating System :: OS/2",
  "Operating System :: Other OS",
  "Operating System :: PalmOS",
  "Operating System :: PDA Systems",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: AIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: BSD :: BSD/OS",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: BSD :: NetBSD",
  "Operating System :: POSIX :: BSD :: OpenBSD",
  "Operating System :: POSIX :: GNU Hurd",
  "Operating System :: POSIX :: HP-UX",
  "Operating System :: POSIX :: IRIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX :: Other",
  "Operating System :: POSIX :: SCO",
  "Operating System :: POSIX :: SunOS/Solaris",
  "Operating System :: RISC OS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Hardware",
  "Topic :: System :: Operating System",
  "Topic :: System :: Operating System Kernels",
  "Topic :: System :: Operating System Kernels :: BSD",
  "Topic :: System :: Operating System Kernels :: GNU Hurd",
  "Topic :: System :: Operating System Kernels :: Linux",
  "Topic :: Utilities",
  "Typing :: Typed",
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
  # distro 1.9.0 adds support for ALT Linux.
  "distro>=1.9",
]

[project.entry-points]
# Make additional fixtures available to pytest.
# See: https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
pytest11.extra-platforms = "extra_platforms.pytest"

[project.optional-dependencies]
pytest = [
  # pytest 8.2.1 is the first version to support Python 3.13.
  "pytest>=8.2.1",
]

[project.scripts]
extra-platforms = "extra_platforms.__main__:main"

[project.urls]
"Changelog" = "https://github.com/kdeldycke/extra-platforms/blob/main/changelog.md"
"Documentation" = "https://kdeldycke.github.io/extra-platforms"
"Download" = "https://github.com/kdeldycke/extra-platforms/releases/tag/v9.1.0"
"Funding" = "https://github.com/sponsors/kdeldycke"
"Homepage" = "https://github.com/kdeldycke/extra-platforms"
"Issues" = "https://github.com/kdeldycke/extra-platforms/issues"
"Repository" = "https://github.com/kdeldycke/extra-platforms"

[dependency-groups]
test = [
  # coverage 7.11.0 is the first version to drop support for Python 3.9.
  "coverage[toml]>=7.11",
  "pytest",
  # pytest-cov 7.0.0 is the first version to be repackaged with pyproject-metadata.
  "pytest-cov>=7",
  # pytest-github-actions-annotate-failures 0.3.0 is the first version to support Python 3.13.
  "pytest-github-actions-annotate-failures>=0.3",
  # pytest-randomly 4.0.0 is the first version to support Python 3.14.
  "pytest-randomly>=4",
  # pytest-xdist 3.7.0 is the first version to support Python 3.13.
  "pytest-xdist[psutil]>=3.7",
  # requests 2.32.5 is the first version to drop support for Python 3.8.
  "requests>=2.32.5",
  "tomli>=2.3; python_version<'3.11'",
]
docs = [
  # We need Click Extra 7.5 to render Markdown table properly.
  "click-extra[sphinx]>=7.5",
  "furo>=2025.9.25",
  "myst-parser>=5",
  # Required so autodoc can import extra_platforms.pytest and document decorators.
  "pytest>=8.2.1",
  # We hard code links with a format that Sphinx only supports from 9.1 onwards.
  "sphinx>=9.1",
  "sphinx-autodoc-typehints>=2.4",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6",
  "sphinx-issues>=5",
  "sphinxcontrib-mermaid>=1.2.2",
  "sphinxext-opengraph>=0.13",
  # wcmatch 10.0 fix some inconsistencies in globbing and symlinks.
  "wcmatch>=10",
]
typing = [
  "types-requests>=2.32.4.20250611",
]

[tool.uv]
dependency-groups.docs = { requires-python = ">= 3.12" }
# Cooldown period.
exclude-newer = "2026-02-08T00:00:00Z"
# Package is at root level, not in "./src/".
build-backend.module-root = ""

# Ruff linter/formatter configuration for Python projects.
#
# Native format - can be used standalone as ruff.toml or .ruff.toml.
# When merged into pyproject.toml via `gha-utils bundled init ruff`,
# the [tool.ruff] prefix is added automatically.
[tool.ruff]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
# Enable formatting of Python code blocks in Markdown files.
# https://docs.astral.sh/ruff/formatter/#markdown-code-formatting
extend-include = [ "*.{markdown,mdown,mkdn,mdwn,mkd,md,mdtxt,mdtext,mdx}" ]
# Enable reformatting of code snippets in docstrings.
# https://docs.astral.sh/ruff/formatter/#docstring-formatting
format.docstring-code-format = true
# D400: First line should end with a period.
#   Allows docstrings to end up with any punctuation, not just a period.
#   See: https://github.com/astral-sh/ruff/issues/1858#issuecomment-1382640623
# ERA001: Found commented-out code.
#   Do not remove commented code, as it might be used for documentation.
#   See: https://docs.astral.sh/ruff/rules/#eradicate-era
lint.ignore = [ "D400", "ERA001" ]
# Allow rules to add `from __future__ import annotations` in cases where
# this would simplify a fix or enable a new diagnostic.
# https://docs.astral.sh/ruff/settings/#lint_future-annotations
lint.future-annotations = true

[tool.gha-utils]
# Building the package with Nuitka is overkill.
nuitka = false

[tool.typos]
default.extend-ignore-identifiers-re = [
  # error: `Tru` should be `Thru`, `True`
  #     ╭▸ ./extra_platforms/group_data.py:345:8
  #     │
  # 345 │     - `Tru64`
  #     ╰╴       ━━━
  "Tru64",
  # error: `PASE` should be `PASS`, `PACE`, `PARSE`, `PHASE`
  #     ╭▸ ./extra_platforms/group_data.py:371:8
  #     │
  # 371 │     - `PASE`
  #     ╰╴       ━━━━
  "PASE",
  # error: `Sur` should be `Sure`
  #    ╭▸ ./extra_platforms/platform.py:57:24
  #    │
  # 57 │     ("11", None): "Big Sur",
  #    ╰╴                       ━━━
  "Sur",
]

[tool.pytest]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
ini_options.addopts = [
  "--durations=10",
  "--cov-report=term",
  "--cov-report=xml",
  # Codecov.io's test analytics requires a JUnit XML file:
  # https://docs.codecov.com/docs/test-analytics#1-output-a-junit-xml-file-in-your-ci
  "--junitxml=junit.xml",
  "--override-ini=junit_family=legacy",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
ini_options.xfail_strict = true

[tool.coverage]
# https://coverage.readthedocs.io/en/latest/config.html
run.branch = true
run.source = [ "extra_platforms" ]
report.precision = 2

[tool.bumpversion]
current_version = "9.1.0"
allow_dirty = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in [project] section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update version in download URL.
filename = "./pyproject.toml"
search = "releases/tag/v{current_version}"
replace = "releases/tag/v{new_version}"

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true
